--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=blog
+
+# change port to 5433 for local development. Another docker container uses 5432
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres 
+spring.datasource.username=postgres
+spring.datasource.password=changemeinprod!
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
