--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=blog
 
+jwt.secret=your-256-bit-secret-key-here-make-it-at-least-32-bytes-long
+
 # change port to 5433 for local development. Another docker container uses 5432
 spring.datasource.url=jdbc:postgresql://localhost:5433/postgres 
 spring.datasource.username=postgres
@@ -9,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
